syntax="proto3";
package F1.Message;


message RequestPing
{
int32 server_id     = 1;
int64 start_time     = 2;
}

message ResponsePong
{
int32 server_id     = 1;
int64 start_time     = 2;
}

message RequestRpc
{
int32 entity_type    = 1;
string entity_id    = 2;
string method        = 3;
bytes args            = 4;

string host            = 5;
int64 request_id    = 6;
int64 id            = 7;
}

message ResponseRpc
{
int64 id            = 1;
int32 error_code    = 2;
string error_msg    = 3;
bytes ret            = 5;
}

message RequestHeartBeat
{
int64 milli_seconds = 1;
}

message ResponseHeartBeat
{
int64 milli_seconds = 1;
}
