syntax="proto3";
package sample;

message ResponseLogin
{
string error = 1;
}

message RequestSayHello
{
string name = 1;
}

message ResponseSayHello
{
string content = 1;
}
